Se codifica los meta tags de las seccione

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -103,3 +103,6 @@
 .marginSection60{ margin: 60px 0;}
 .padding-text { padding-left: 75px;}
 .img-footer-certification{ width: 50%;}
+.iwebLogo {    width: 120px;
+               position: relative;
+               top: 5px;}
