--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -106,3 +106,31 @@
 .iwebLogo {    width: 120px;
                position: relative;
                top: 5px;}
+ul.pagination {
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+}
+
+ul.pagination li {display: inline;}
+ul.pagination li.active {background-color: rgba(63,180,170,0.5);
+                         color: #fff;
+                         padding: 11px 16px;
+                         position: relative;
+                         top: 8px;}
+ul.pagination li.active a {background-color: #60d1c7;
+                           color: #fff;}
+ul.pagination li a:hover{background-color: rgba(63,180,170,0.5); color: #fff;}
+
+ul.pagination li a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+.videoFrame{
+    width: 90%;
+    height: 480px;
+    display: block;
+    margin: 0px auto;
+}
